fixed white spaces and popup modal

--- a/src/pages/home/style/SearchByGolfCourse.module.css
+++ b/src/pages/home/style/SearchByGolfCourse.module.css
@@ -1,5 +1,5 @@
 .search_by_golf_course_Section {
-  margin: 5rem 0;
+  margin: 3rem 0;
 }
 
 .search_by_golf_input_container_headings {
