--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -290,10 +290,18 @@ input[type="number"]::-webkit-outer-spin-button {
 .ant-select-single {
   width: 100% !important;
 }
+
 :where(.css-w8mnev).ant-select-single:not(.ant-select-customize-input)
   .ant-select-selector
   .ant-select-selection-search-input {
   height: 100% !important;
+}
+
+.ant-select-disabled:where(.css-dev-only-do-not-override-w8mnev).ant-select:not(
+    .ant-select-customize-input
+  )
+  .ant-select-selector {
+  background-color: #cdcaca;
 }
 
 /* DATE PICKER IN VIEW PROPERTY PAGE */
